--- a/index.html
+++ b/index.html
@@ -1,22 +1,18 @@
+<!DOCTYPE html>
 <html>
-
 <head>
+    <title>A* Example</title>
+    <link rel="stylesheet" href="css/style.css">
     <meta charset="UTF-8">
     <script language="javascript" type="text/javascript" src="libraries/p5.js"></script>
     <script language="javascript" type="text/javascript" src="libraries/p5.dom.js"></script>
     <script language="javascript" type="text/javascript" src="sketch.js"></script>
     <script language="javascript" type="text/javascript" src="spot.js"></script>
-    
-    <style>
-    body {
-      padding: 20px;
-    }
-    </style>
+   
 </head>
 
 <body>
-  <h1>A* Algortihm</h1>
-
+  <h1>A* Algorithm. Press F5 to refresh</h1>
 </body>
 
 </html>
