--- a/index.html
+++ b/index.html
@@ -5,14 +5,17 @@
     <link rel="stylesheet" href="css/style.css">
     <meta charset="UTF-8">
     <script language="javascript" type="text/javascript" src="libraries/p5.js"></script>
-    <script language="javascript" type="text/javascript" src="libraries/p5.dom.js"></script>
-    <script language="javascript" type="text/javascript" src="sketch.js"></script>
+    <script language="javascript" type="text/javascript" src="libraries/p5.dom.js"></script><script language="javascript" type="text/javascript" src="sketch.js"></script>
     <script language="javascript" type="text/javascript" src="heuristic.js"></script>
     <script language="javascript" type="text/javascript" src="spot.js"></script>
 </head>
 
 <body>
-  <h1>A* Algorithm. Press F5 to refresh</h1>
+  <h1>A* Algorithm</h1>
 </body>
+
+<section>
+  <button onclick="location.reload()">Restart</button>
+</section>
 
 </html>
