--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="css/style.css">
     <meta charset="UTF-8">
     <script language="javascript" type="text/javascript" src="libraries/p5.js"></script>
-    <script language="javascript" type="text/javascript" src="libraries/p5.dom.js"></script><script language="javascript" type="text/javascript" src="sketch.js"></script>
+    </script><script language="javascript" type="text/javascript" src="sketch.js"></script>
     <script language="javascript" type="text/javascript" src="heuristic.js"></script>
     <script language="javascript" type="text/javascript" src="spot.js"></script>
 </head>
